package es.ujaen.dae.sistemadeincidenciasurbanas.entidades;

public enum EstadoIncidencia {
    PENDIENTE,
    EN_EVALUACION,
    RESUELTA;
}

