package es.ujaen.dae.sistemadeincidenciasurbanas.entidades;

public class Incidencia {
}
