package es.ujaen.dae.sistemadeincidenciasurbanas.entidades;

public class TipoIncidencia {
    private String nombre;
    private String descripcion;
}
